objects/Agent__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Agents</relationshipLabel>
        <relationshipName>Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>